--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
 				display: flex;
 				font-family: 'Roboto', sans-serif;
 			}
+			.body-wrapper {
+				margin: 0;
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				display: flex;
+				font-family: 'Roboto', sans-serif;
+				overflow: hidden;
+			}
 			#initial-slide {
 				width: 50vw;
 				height: 100vh;
@@ -253,6 +264,9 @@
 				body {
 					flex-direction: column;
 				}
+				.body-wrapper {
+					flex-direction: column;
+				}
 				#initial-slide {
 					width: 100vw;
 					height: 50vh;
@@ -297,8 +311,16 @@
 				.game-controller .btn {
 					font-size: 1rem;
 				}
+				.score-container {
+					align-items: flex-start;
+					margin-top: 1rem;
+				}
 			}
 			@media (max-height: 512px) {
+				.score-container {
+					align-items: flex-start;
+					margin-top: 1rem;
+				}
 				.slide-overlay {
 					width: 50vw;
 					height: 100vh;
@@ -328,63 +350,116 @@
 					font-size: 1rem;
 				}
 			}
+			@media (max-width: 411px) {
+				.versus {
+					padding: 0.7rem;
+					font-size: 1.7rem;
+				}
+				.game-controller .title {
+					font-size: 1.5rem;
+				}
+				.game-controller .points {
+					font-size: 2.5rem;
+				}
+				.highscore {
+					margin-left: 1rem;
+				}
+				.score {
+					margin-right: 1rem;
+				}
+				.modal-children .title {
+					font-size: 1.3rem;
+				}
+			}
+			@media (max-height: 414px) {
+				body {
+					flex-direction: row;
+				}
+				.body-wrapper {
+					flex-direction: row;
+				}
+				#initial-slide {
+					width: 50vw;
+					height: 100vh;
+					transition: 0.5s;
+				}
+				.versus {
+					padding: 1.3rem;
+					font-size: 1.3rem;
+				}
+			}
+			@media (max-height: 375px) {
+				.game-controller .title {
+					font-size: 1.6rem;
+				}
+				.game-controller .btn {
+					padding: 1rem 3rem;
+				}
+				.versus {
+					padding: 1rem;
+					font-size: 1rem;
+				}
+			}
 		</style>
 	</head>
 	<body>
-		<div class="modal">
-			<div class="modal-children">
-				<h1 class="title">Ooops Looks like you've lost</h1>
-				<button class="btn retry">
-					Retry <i class="fas fa-arrow-circle-down"></i>
-				</button>
-			</div>
-		</div>
-		<div class="versus-container">
-			<div class="versus">VS</div>
-		</div>
-		<div class="score-container">
-			<div class="highscore">
-				High Score: <span class="high-score-points">0</span>
-			</div>
-			<div class="score">Score: <span class="score-points">0</span></div>
-		</div>
-		<div id="initial-slide" class="left-sl">
-			<div class="slide-overlay"></div>
-			<div class="game-controller">
-				<h1 class="title left">
-					<span class="quote start">“</span>Slacklining<span
-						class="quote end"
-						>”</span
-					>
-				</h1>
-				<p class="has">has</p>
-				<h1 class="points left">22,200</h1>
-				<p class="searches left">average monthly searches</p>
-			</div>
-		</div>
-		<div id="initial-slide" class="right-sl">
-			<div class="slide-overlay"></div>
-			<div class="game-controller">
-				<h1 class="title right">
-					<span class="quote start">“</span>United Airlines<span
-						class="quote end"
-						>”</span
-					>
-				</h1>
-				<p class="has">has</p>
-				<div class="higher-lower">
-					<button class="btn higher">
-						Higher <i class="fas fa-caret-up up"></i>
-					</button>
-					<button class="btn lower">
-						Lower <i class="fas fa-caret-down down"></i>
+		<div class="body-wrapper">
+			<div class="modal">
+				<div class="modal-children">
+					<h1 class="title">Ooops Looks like you've lost</h1>
+					<button class="btn retry">
+						Retry <i class="fas fa-arrow-circle-down"></i>
 					</button>
 				</div>
-				<h1 class="points right">0</h1>
-				<p class="searches right">searches than Slacklining</p>
+			</div>
+			<div class="versus-container">
+				<div class="versus">VS</div>
+			</div>
+			<div class="score-container">
+				<div class="highscore">
+					High Score: <span class="high-score-points">0</span>
+				</div>
+				<div class="score">
+					Score: <span class="score-points">0</span>
+				</div>
+			</div>
+			<div id="initial-slide" class="left-sl">
+				<div class="slide-overlay"></div>
+				<div class="game-controller">
+					<h1 class="title left">
+						<span class="quote start">“</span>Slacklining<span
+							class="quote end"
+							>”</span
+						>
+					</h1>
+					<p class="has">has</p>
+					<h1 class="points left">22,200</h1>
+					<p class="searches left">average monthly searches</p>
+				</div>
+			</div>
+			<div id="initial-slide" class="right-sl">
+				<div class="slide-overlay"></div>
+				<div class="game-controller">
+					<h1 class="title right">
+						<span class="quote start">“</span>United Airlines<span
+							class="quote end"
+							>”</span
+						>
+					</h1>
+					<p class="has">has</p>
+					<div class="higher-lower">
+						<button class="btn higher">
+							Higher <i class="fas fa-caret-up up"></i>
+						</button>
+						<button class="btn lower">
+							Lower <i class="fas fa-caret-down down"></i>
+						</button>
+					</div>
+					<h1 class="points right">0</h1>
+					<p class="searches right">searches than Slacklining</p>
+				</div>
 			</div>
 		</div>
-
 		<script>
 			const rightSidePoints = document.querySelector('.points.right');
 			const higherButton = document.querySelector('.higher');
@@ -401,10 +476,15 @@
 
 			retryBtn.addEventListener('click', () => {
 				modal.classList.remove('show');
-				document.body.lastElementChild.remove();
-				document.body.lastElementChild.remove();
-				document.body.append(leftSlide);
-				document.body.append(rightSlide);
+				const bodyWrapper = document.querySelector('.body-wrapper');
+				// document.body.lastElementChild.remove();
+				// document.body.lastElementChild.remove();
+				// document.body.append(leftSlide);
+				// document.body.append(rightSlide);
+				bodyWrapper.lastElementChild.remove();
+				bodyWrapper.lastElementChild.remove();
+				bodyWrapper.append(leftSlide);
+				bodyWrapper.append(rightSlide);
 				const slideTitle = document.querySelector('.points.right');
 				slideTitle.textContent = '0';
 				slideTitle.classList.remove('show');
@@ -516,6 +596,90 @@
 						'url("http://api.higherlowergame.com/_client/images/general/halloween.jpg")',
 					searches: 4090000,
 				},
+				{
+					title: 'Orange',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/orange.jpg")',
+					searches: 16600000,
+				},
+				{
+					title: '9 11',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/9-11.jpg")',
+					searches: 1000000,
+				},
+				{
+					title: 'Hip Hop',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/hip-hop.jpg")',
+					searches: 823000,
+				},
+				{
+					title: 'John Lewis',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/john-lewis.jpg")',
+					searches: 6120000,
+				},
+				{
+					title: 'Broadchurch',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/broadchurch.jpg")',
+					searches: 550000,
+				},
+				{
+					title: 'Victoria Secret',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/victorias-secret.jpg")',
+					searches: 7480000,
+				},
+				{
+					title: 'ESPN',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/espn.jpg")',
+					searches: 24900000,
+				},
+				{
+					title: 'Brian Clough',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/brian-clough.jpg")',
+					searches: 33100,
+				},
+				{
+					title: 'Candy Crush Saga',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/candy-crush-saga.jpg")',
+					searches: 7480000,
+				},
+				{
+					title: 'Spain',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/spain.jpg")',
+					searches: 823000,
+				},
+				{
+					title: 'Mcdonalds',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/mcdonalds.jpg")',
+					searches: 13600000,
+				},
+				{
+					title: 'Exchange Rate',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/exchange-rate.jpg")',
+					searches: 2740000,
+				},
+				{
+					title: 'Chapecoense',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/chapecoense.jpg")',
+					searches: 673000,
+				},
+				{
+					title: 'Scented Candles',
+					image:
+						'url("http://api.higherlowergame.com/_client/images/general/scented-candles.jpg")',
+					searches: 40500,
+				},
 			];
 			function getSlideData() {
 				if (shuffleSlides.length === temp.length) {
@@ -535,6 +699,7 @@
 			}
 			function createSilde() {
 				const initialSlide = document.createElement('div');
+				console.log(temp);
 				const slideData = getSlideData();
 
 				if (!slideData) {
@@ -691,7 +856,8 @@
 					.textContent.replace(/[“”]+/g, '')}`;
 				gameController.append(searches);
 				initialSlide.append(gameController);
-				document.body.append(initialSlide);
+				// document.body.append(initialSlide);
+				document.querySelector('.body-wrapper').append(initialSlide);
 			}
 
 			function displayWin() {
