--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
 			rel="stylesheet"
 		/>
+
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
+
 		<script
 			src="https://kit.fontawesome.com/50461cc56f.js"
 			crossorigin="anonymous"
@@ -156,11 +178,12 @@
 				z-index: 1000;
 				display: flex;
 				padding: 2rem;
-				font-size: 2rem;
+				font-size: 1.8rem;
 				font-weight: 600;
 				justify-content: center;
 				align-items: center;
 			}
+
 			.score-container {
 				position: absolute;
 				width: 100vw;
@@ -413,7 +436,7 @@
 				</div>
 			</div>
 			<div class="versus-container">
-				<div class="versus">VS</div>
+				<div class="versus won">VS</div>
 			</div>
 			<div class="score-container">
 				<div class="highscore">
@@ -699,7 +722,6 @@
 			}
 			function createSilde() {
 				const initialSlide = document.createElement('div');
-				console.log(temp);
 				const slideData = getSlideData();
 
 				if (!slideData) {
@@ -774,10 +796,6 @@
 									(leftSlideNumber >= number && !isHigher)
 								) {
 									score.textContent = +score.textContent + 1;
-									console.log(shuffleSlides.length);
-									console.log(temp.length);
-									console.log(shuffleSlides);
-									console.log(temp);
 									if (shuffleSlides.length === temp.length) {
 										document.querySelector(
 											'.modal-children .title'
@@ -800,7 +818,6 @@
 										'.searches'
 									).textContent = 'average monthly searches';
 									clearTimeout(timeoutId);
-									console.log('created slide');
 									createSilde();
 								} else {
 									const highscore = document.querySelector(
@@ -858,15 +875,6 @@
 				initialSlide.append(gameController);
 				// document.body.append(initialSlide);
 				document.querySelector('.body-wrapper').append(initialSlide);
-			}
-
-			function displayWin() {
-				document.querySelector('.modal-children .title').textContent =
-					"Good Job! You've won";
-				document.querySelector('.modal-children .retry').textContent =
-					'Replay';
-				document.querySelector('.modal').classList.add('show');
-				return;
 			}
 
 			const setHigherOrLower = isHigher => {
