--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="body-wrapper">
 			<div class="modal">
 				<div class="modal-children">
-					<h1 class="title">Ooops Looks like you've lost</h1>
+					<h1 class="title">Ooops! Looks like you've lost</h1>
 					<button class="btn retry">
 						Retry <i class="fas fa-arrow-circle-down"></i>
 					</button>
