added preload for start screen

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
 		/>
 		<link rel="manifest" href="/site.webmanifest" />
 		<link rel="stylesheet" href="/index.css" />
+		<link
+			rel="prefetch"
+			href="http://api.higherlowergame.com/_client/images/general/slacklining.jpg"
+		/>
+		<link
+			rel="prefetch"
+			href="http://api.higherlowergame.com/_client/images/general/flights.jpg"
+		/>
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="theme-color" content="#ffffff" />
 
